results/print-ir/expected/failure/resolver/continue_out_of_loop.psy.out
Parsed OK
error: 'continue' statement outside of a loop.
  --> tests/failure/resolver/continue_out_of_loop.psy:1:1
   |
  1| continue;
   | ^--- Here


Semantic analysis failed. Compilation stopped.
